<resources>
    <string name="app_name">CMAM Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="cmam">CMAM</string>
    <string name="malnutrition_management_system">Malnutrition Management System</string>
    <string name="summary">A mobile application that enables health workers to manage malnutrition.</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="phone">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgotpassword">Forgot password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="twitterUsername">\@gsuleh</string>
    <string name="settings">Settings</string>
    <string name="todo">TODO</string>
    <string name="personal">Personal</string>
    <string name="safety">CMAM Guideline</string>
    <string name="patient_records">Patient records</string>
    <string name="sign_out">Sign out</string>
    <string name="active_patients">Active Patients</string>
    <string name="dashboard">Dashboard</string>
    <string name="menu">Menu</string>
    <string name="home">Home</string>
    <string name="medical_institutions">Medical Institutions</string>
    <string name="inventory">Inventory</string>
    <string name="hospitals">Hospitals</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="guardian_email_address">Guardian Email Address</string>
    <string name="guardian_name">Guardian name</string>
    <string name="guardian_phone">Guardin Phone</string>
    <string name="guardian_id">Guardian National ID</string>
    <string name="addpatient">Add Patient</string>
    <string name="chu">CHUs</string>
    <string name="chudesc">Community Health Units in Nairobi County.</string>
    <string name="chudesc1">Community Health Units in the Sub County.</string>
    <string name="chudesc2">Community Health Units linked to the Facility.</string>
    <string name="linkfacilities">Health Facilities</string>
    <string name="linkfacilitydesc">A list of  all health facilities in Nairobi linked to Community Health Units.</string>
    <string name="linkfacilitydesc1">A list of  all health facilities in your Sub County linked to Community Health Units.</string>
    <string name="analytics">Analytics and Reports</string>
    <string name="analyticsdesc">Reports generated from data collected in the field by CHVs and insights gained from analyzing the data.</string>
    <string name="settingsdesc">Manage system settings and User roles and information.</string>
    <string name="resources">Resources</string>
    <string name="lresourcesdesc">Manage the RUTF Supply to each Sub-County.</string>
    <string name="lresourcesdesc1">Manage the RUTF Supply to each Link Facility.</string>
    <string name="sign_outdesc">Proceed to Signout of your user account.</string>
    <string name="referrals">Referrals</string>
    <string name="referralsdesc">Referrals recieved from linked Community Health Units</string>
    <string name="patients">Patients</string>
    <string name="patientsdesc">Records of all active and discharged patients</string>
    <string name="newpatient">New Patient</string>
    <string name="startscreening">Begin Assessment</string>
    <string name="screeningdesc">Start the Malnutrition screing process for children and expectant mothers.</string>
    <string name="guiglinesdesc1">Guidelines to help you carry out the CMAM process.</string>
    <string name="cmamguidelines">CMAM Guidelines</string>
    <string name="postdischarge">Post Discharge</string>
    <string name="postdischargedesc">Follow up on patients after completion of treatment.</string>
    <string name="subcountychu">Sub Counties and CHUs</string>
    <string name="subcountychudesc">List of all Sub-Counties and their associated CHUs.</string>
    <string name="user">Manage Users</string>
    <string name="userdesc">Assign Users roles within the system.</string>
    <string name="assignuserrole">Assign Users Roles</string>
    <string name="userroledesc">Assign users roles within the systemAssign Users roles and committees within the system.</string>
    <string name="name">Name</string>
    <string name="role">Role</string>
    <string name="email">Email</string>
    <string name="edit">Edit</string>
    <string name="committees">Committees</string>
    <string name="committesdesc">Assign users to commitees based on roles</string>
    <string name="listcommittesdesc">Manage all committees in the system</string>
    <string name="counties">Counties</string>
    <string name="countiesdesc">List of all counties in Kenya.</string>
    <string name="subcounty">Sub Counties</string>
    <string name="subcountydesc">List of all Sub Counties in Nairobi.</string>
    <string name="chudesc3">List of all Community Health Units in Nairobi.</string>
    <string name="createuser">Create User</string>
    <string name="createusersdesc">Create users within the system. (prompted to verify account on login)</string>
    <string name="ward">Ward</string>
    <string name="code">Code</string>
    <string name="createresource">Create Resource Package</string>
    <string name="assigninventory">Allocate Inventory</string>
    <string name="resoursecreation">Create new resource inventory.</string>
    <string name="inventorydesc">Allocate resources to Sub Counties</string>
    <string name="updateinventory">Update Inventory</string>
    <string name="updateinventorydesc">Update exiting inventory.</string>
    <string name="newresource">New Resource Entry</string>
    <string name="serialno">Serial Number</string>
    <string name="product">Product Name</string>
    <string name="inventoryamount">Inventory Amount</string>
    <string name="create">CREATE</string>
    <string name="resourcetype">Resource Type</string>
    <string name="assignadmin">Assign Admin</string>
    <string name="subcountyname">Sub County</string>
    <string name="selectuser">Select User</string>
    <string name="selectrole">Select Role</string>
    <string name="assignrole">Assign Role</string>
    <string name="assignresource">Assign Resource</string>
    <string name="selectsubcounty">Select SubCounty</string>
    <string name="amount">Amount</string>
    <string name="updateresource">Update Resource</string>
    <string name="status">Status</string>
    <string name="sub_county_chus">Sub County CHUs</string>
    <string name="linkfacility">Link Facility</string>
    <string name="facilitytype">Facility Type</string>
    <string name="requestresource">Request for Resource</string>
    <string name="subcountycode">SubCounty Code</string>
    <string name="healthfacilities">Health Facility</string>
    <string name="chvs">Community Health Volunteers</string>
    <string name="chodesc">List of community health volunteers operating within your Community Health Unit</string>
    <string name="selecttreatementgroup">Treatment Group</string>
    <string name="nationalid">Guardian National ID</string>
    <string name="fullname">Full Name</string>
    <string name="age">Age</string>
    <string name="height">Height (Centimetres)</string>
    <string name="weight">Weight (KGs)</string>
    <string name="gender">Gender</string>
    <string name="severity">Severity</string>
    <string name="armcirc">Arm Circumference</string>
    <string name="muac">Middle and Upper Arm Circumference</string>
    <string name="caregiver_name">Care Giver\'s Name</string>
    <string name="child_s_name">Child\'s Name</string>
    <string name="children_0_59_months">Children 0-59 months</string>
    <string name="childassessmentdesc">Begin assessment for children between the ages of 0 - 59 months.</string>
    <string name="pregnant_and_lactating_women">Pregnant and lactating women</string>
    <string name="plwdesc">Begin assessment for pregnant and lactating women (PLWs).</string>
    <string name="pregnant">Pregnant</string>
    <string name="plwstatus">PLW Status</string>
    <string name="weight_to_height_score">Weight to Height score</string>
    <string name="malnutrition_rate">Malnutrition Rate</string>
    <string name="treatment">Treatment</string>
    <string name="duration">Duration</string>
    <string name="household">Household</string>
    <string name="location">Location</string>
    <string name="dob">Date of Birth</string>
    <string name="vitamin_a">Vitamin A</string>
    <string name="albendazole">Albendazole</string>
    <string name="measles_vaccine">Measles Vaccine</string>
    <string name="plumpy_suppliment_packets">Plumpy Suppliment Packets</string>
    <string name="ironpluss">Iron Plus</string>
    <string name="folicacid">Folic Acid</string>
    <string name="tetanustoxoid">Tetanus Toxoid</string>
    <string name="pregnancy_status">Pregnancy Status</string>
    <string name="follow_up_date">Follow Up Date</string>
    <string name="set_date">Set Date</string>
    <string name="followup">FollowUp</string>
    <string name="followupdesc">Follow up on patients admitted to Tsfp</string>
    <string name="treatmentgroup">Treatment Group</string>
    <string name="tsfppatients">TSFP Patients</string>
    <string name="chunit">CHU</string>
    <string name="done">DONE</string>
    <string name="discharged">Discharged</string>
    <string name="pendingfollowup">Pending Followup</string>
</resources>