<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PLW_Patient">

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="Begin Assessment"
            android:textColor="#000000"
            android:textSize="24sp"></TextView>

        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/menu"
            android:contentDescription="@string/todo">

        </ImageView>
    </RelativeLayout>


    <TextView
        android:id="@+id/plwtextview"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:text="@string/plwstatus"
        android:textSize="24sp"
        android:textColor="#000000"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <Spinner
        android:id="@+id/plw"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plwtextview"
        android:autofillHints="" />
    <!--suppress AndroidDomInspection -->

    <TextView
        android:id="@+id/pregnanttextview"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:text="@string/pregnancy_status"
        android:textSize="24sp"
        android:textColor="#000000"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plw"
        android:autofillHints="" />

    <Spinner
        android:id="@+id/pregnant"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pregnanttextview"
        android:autofillHints="" />
    <!--suppress AndroidDomInspection -->
    <TextView
        android:id="@+id/fnametextview"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:text="@string/name"
        android:textSize="24sp"
        android:textColor="#000000"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pregnant"
        android:autofillHints="" />

    <EditText
        android:id="@+id/fullname"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/fullname"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fnametextview"
        android:autofillHints="" />




    <TextView
        android:id="@+id/guardianteltextview"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:text="@string/phone"
        android:textSize="24sp"
        android:textColor="#000000"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullname"
        android:autofillHints="" />

    <EditText
        android:id="@+id/guardian_phone"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/guardian_phone"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guardianteltextview"
        android:autofillHints="" />

    <TextView
        android:id="@+id/nationalidtextview"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:text="@string/nationalid"
        android:textSize="24sp"
        android:textColor="#000000"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guardian_phone"
        android:autofillHints="" />

    <EditText
        android:id="@+id/nationalid"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/guardian_id"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nationalidtextview"
        android:autofillHints="" />





    <Button
        android:id="@+id/newpatient"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg"
        android:text="@string/next"
        android:textSize="24sp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nationalid"
        tools:targetApi="lollipop"/>

    <ProgressBar
        android:id="@+id/progressbar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:ignore = "MissingConstraint"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>