<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapChvsActivity">

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="CHVs"
            android:textColor="#000000"
            android:textSize="24sp"></TextView>

        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/menu"
            android:contentDescription="@string/todo">

        </ImageView>
    </RelativeLayout>


    <TextView
        android:id="@+id/bannerdescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:layout_marginTop="15dp"
        android:text="@string/assignrole"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="italic"
        android:textColor="@color/colorPrimary"
        app:layout_anchorGravity="bottom|center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relative"
        android:layout_gravity="center_horizontal" />


    <TextView
        android:id="@+id/spinnertextview"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:text="@string/code"
        android:textSize="24sp"
        android:textColor="#000000"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bannerdescription"
        android:autofillHints="" />

    <EditText
        android:id="@+id/assignedcommittee"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/code"
        android:inputType="none"
        android:focusable="false"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnertextview"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textviewemail"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:text="@string/email_address"
        android:textSize="24sp"
        android:textColor="#000000"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assignedcommittee"
        android:autofillHints="" />

    <EditText
        android:id="@+id/assignedemail"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="none"
        android:focusable="false"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textviewemail"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textviewrole"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:text="@string/role"
        android:textSize="24sp"
        android:textColor="#000000"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assignedemail"
        android:autofillHints="" />

    <EditText
        android:id="@+id/assignedrole"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/role"
        android:inputType="none"
        android:focusable="false"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textviewrole"
        android:autofillHints="" />

</androidx.constraintlayout.widget.ConstraintLayout>